<resources>
    <string name="app_name" translatable="false">Kiosk</string>
    <string name="round" translatable="false">%.2f zł</string>
    <string name="pay">PAY</string>
    <string name="cancel">CANCEL</string>
    <string name="payment_started">Płatność Rozpoczęta</string>
    <string name="look_at_the_payment_terminal_bellow">Postępuj zgodnie z instrukcjami wyświetlonymi na terminalu poniżej</string>
    <string name="total_order_sum">Kwota do zapłaty</string>
    <string name="exit">Powrót</string>
    <string name="retry">Spróbuj Ponownie</string>
    <string name="system_do_not_return">System nie wydaje potwierdzeń płatności</string>
    <string name="payment_accepted">Płatność zaakceptowana</string>
    <string name="price">Cena: %.2f zł</string>
    <string name="press">Press to Order</string>

    <string name="payment_not_authorised">Płatność nie została zaakceptowana</string>
    <string name="payment_not_processed">Płatność nie została przetworzona</string>
    <string name="payment_unable_to_authorise">Nie jest możliwa autoryzacja płatności</string>
    <string name="payment_unable_to_process">Nie jest możliwe przetworzenie płatności</string>
    <string name="payment_unable_to_connect">Nie jest możliwe połącznie z serwerami</string>
    <string name="payment_void">Błąd</string>
    <string name="payment_cancelled">Płatność Anulowana</string>
    <string name="payment_invalid_password">Niewłaściwy PIN</string>
    <string name="payment_amount_maximum_limit">Przekroczenie limitu</string>
    <string name="payment_connection_failure">Błąd połączenia</string>
    <string name="payment_timeout_reached">Koniec czasu na połączenie osiągnięty</string>
    <string name="payment_invoice_not_found">Faktura nie znaleziona</string>
    <string name="payment_cashback_exceed_max">Przekroczenie limitu CashBack-u</string>
    <string name="payment_cashback_not_allowed">CashBack nie jest dozwolony</string>
    <string name="payment_incomplete">Niekomplentne</string>
    <string name="name_info">Imię użyte do twojego zamówienia</string>

    <string name="test">test_ang</string>

    <string name="name_first_1">A</string>
    <string name="name_first_2">B</string>
    <string name="name_first_3">C</string>
    <string name="name_first_4">Śnieżny</string>
    <string name="name_first_5">E</string>
    <string name="name_first_6">F</string>
    <string name="name_first_7">G</string>
    <string name="name_first_8">H</string>
    <string name="name_first_9">I</string>
    <string name="name_first_10">J</string>

    <string name="name_seccond_1">K</string>
    <string name="name_seccond_2">L</string>
    <string name="name_seccond_3">M</string>
    <string name="name_seccond_4">N</string>
    <string name="name_seccond_5">O</string>
    <string name="name_seccond_6">P</string>
    <string name="name_seccond_7">Q</string>
    <string name="name_seccond_8">R</string>
    <string name="name_seccond_9">Koczkodan</string>
    <string name="name_seccond_10">T</string>

    <string name="confirm_payment">Rozpocznij Płatność</string>
    <string name="change_name">Zmień Imie</string>
    <string name="popup_change">Zatwierdź</string>
    <string name="popup_cancel">Anuluj</string>
    <string name="edit_order">Edytuj zamówienie</string>
    <string name="order_summary">Podsumowanie zamówienia</string>
    
    <string name="end_goal">Po odbór zamówienia podejdź do ...</string>

    <string name="cancel_payment">Anuluj Zamówienie</string>

    <string name="imie_1">Radosna Kaczka</string>
    <string name="imie_2">Smutny Lisek</string>
    <string name="imie_3">Śpiąca Panda</string>
    <string name="imie_4">Skaczący Tygrysek</string>
    <string name="imie_5">Uroczy Piesek</string>
    <string name="imie_6">Mały Kotek</string>
    <string name="imie_7">Wysoka Żyrafa</string>
    <string name="imie_8">Niedziwiadek</string>
    <string name="imie_9">Lemur</string>
    <string name="imie_10">Zły Dzik</string>
    <string name="imie_11">Słoń</string>
    <string name="imie_12">Krokodyl</string>
    <string name="imie_13">Papuga</string>
    <string name="imie_14">Fretka</string>
    <string name="imie_15">Kapibara</string>
    <string name="imie_16">Śpiewający Ptaszek</string>
    <string name="imie_17">Biegająca Wiewiórka</string>
    <string name="imie_18">Mąłpka</string>
    <string name="imie_19">Goryl</string>
    <string name="imie_20">Jastrząb</string>
    <string name="imie_21">Emu</string>
    <string name="imie_22">Kangur</string>
    <string name="imie_23">Sowa</string>
    <string name="imie_24">Gepard</string>
    <string name="imie_25">Orzeł</string>
    <string name="imie_26">Mors</string>
    <string name="imie_27">Foka</string>
    <string name="imie_28">Krówka</string>
    <string name="imie_29">Świnka</string>
    <string name="imie_30">Kurczak</string>
    <string name="imie_31">Konik</string>
    <string name="imie_32">Chomik</string>
    <string name="imie_33">Ośmiorniczka</string>
    <string name="imie_34">Krab</string>
    <string name="imie_35">Orka</string>
    <string name="imie_36">Koczkodan</string>
    <string name="imie_37">Koala</string>
    <string name="imie_38">Pingwin</string>
    <string name="imie_39">Lew</string>
    <string name="imie_40">Myszka</string>
    <string name="imie_41">Tukan</string>
    <string name="imie_42">Lama</string>
    <string name="imie_43">Nosorożec</string>
    <string name="imie_44">Hipopotam</string>
    <string name="imie_45">Osiołek</string>
    <string name="imie_46">Zebra</string>
    <string name="imie_47">Łoś</string>
    <string name="imie_48">Żabka</string>
    <string name="imie_49">Owca</string>
    <string name="imie_50">Jeżyk</string>

</resources>